--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 form {
-         background-image:url(../images/hg.png);
+         background-image:url(../images/hg_IPE.png);
          background-repeat:no-repeat;
          padding:20px;
          background-color:#fcfdfa;
